[package]
name = "doctor-vision"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
base64 = "0.21.0"
cloud-vision-flows = "0.1.1"
http_req_wasi = "0.10.2"
image = "0.24.6"
lambda-flows = "0.2.2"
serde_json = "1.0.96"
tg-flows = "0.1.9"
url = "2.3.1"
