[package]
name = "doctor-vision"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
base64 = "0.21.0"
cloud-vision-flows = "0.1.1"
http_req_wasi = "0.10.2"
image = "0.24.6"
lambda-flows = "0.2.2"
openai-flows = "0.4.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
store-flows = "0.3.1"
# teloxide = "0.8.2"
tg-flows = "0.1.9"
tokio_wasi = { version = "1.25.1", features = ["full"] }
url = "2.3.1"
