[package]
name = "doctor-vision"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
cloud-vision-flows = "0.1.1"
store-flows = "0.3.1"
tg-flows = "0.2.1"
openai-flows = "0.7.1"

base64 = "0.21.0"
http_req_wasi = "0.10.2"

once_cell = "1.17.1"

serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

tokio_wasi = { version = "1.25.1", features = ["rt", "macros"] }
url = "2.3.1"
flowsnet-platform-sdk = "0.1.4"
dotenv = "0.15.0"
log = "0.4.18"
